--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "bdd-tests": "./node_modules/@cucumber/cucumber/bin/cucumber-js -p default"
   },
   "dependencies": {
     "@nestjs/common": "^7.5.1",
@@ -29,9 +30,11 @@
     "rxjs": "^6.6.3"
   },
   "devDependencies": {
+    "@cucumber/cucumber": "^7.0.0",
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/cucumber": "^7.0.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
