--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
+    "pg-promise": "^10.9.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "uninstall": "0.0.0"
   },
   "devDependencies": {
     "@cucumber/cucumber": "^7.0.0",
